Shift js code to separate files and fix footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,7 @@ p {
 
 .navigation li {
     margin-left: 20px;
-    font-size: 1.5vw;
+    font-size: 1.1vw;
 
 }
 
@@ -63,7 +63,7 @@ p {
 }
 
 .banner p {
-    font-size: 1.5vw;
+    font-size: 1.2vw;
     line-height: 1.6;
 
 }
@@ -127,7 +127,7 @@ p {
 
 .grid-item p {
     margin: 0;
-    font-size: 1.5vw;
+    font-size: 1.2vw;
     line-height: 1.6;
 }
 
@@ -190,6 +190,9 @@ p {
     padding: 10px 0;
     color: #999;
     font-size: 16px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
 
 input#serving {
